Fix portfolio/analysis call

--- a/etc/confd/templates/swagger.yaml.tmpl
+++ b/etc/confd/templates/swagger.yaml.tmpl
@@ -8237,7 +8237,7 @@ paths:
               "identity": "$context.identity.cognitoIdentityId",
               "id": $input.json('$.id'),
               "mode": $input.json('$.mode'),
-              "broker": $input.json('$.broker'),
+              "broker": $input.json('$.broker')
             }
         responses:
           200:
